ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 80
      targetPort: 8080
